2013-02-08  James Hunt  <james.hunt@ubuntu.com>

	* init/job_process.c: job_process_run(): Copy parent environment if
	  inherit_env in operation for a Session Init.
	* init/main.c: Added 'inherit-env' command-line option.
	* init/man/init.8: Documented --inherit-env.

2013-02-02  James Hunt  <james.hunt@ubuntu.com>

	* util/initctl.c: Remove ability to specify explicitly job and/or job
	  instance values to the job environment commands.
	* util/man/initctl.8: Remove job and job instance value command-line
	  options.
	* util/tests/test_initctl.c: test_global_and_local_job_env(): Remove
	  tests for --job/--instance.

2013-01-31  James Hunt  <james.hunt@ubuntu.com>

	* init/control.c:
	  - Use control_check_permission() rather than
	    control_get_origin_uid() directly.
	* init/control.h: Prototypes.
	* init/job_class.c: Change calls to job_class_environment_init()
	  to asserts as the former only needs to be called once.
	* init/main.c: main(): Make job_class_environment_init() call as
	  early as possible.
	* init/tests/test_event.c: main(): Call
	  job_class_environment_init().
	* util/tests/test_initctl.c:
	  - test_default_job_env():
	    - Set TERM and PATH if not set.
	    - Check line counts before checking expected output.
	  - test_clear_job_env():
	    - Make use of TEST_INITCTL_DEFAULT_PATH.

2013-01-30  James Hunt  <james.hunt@ubuntu.com>

	* TESTING.sessions: Removed as basic sessions have now gone.

2013-01-30  James Hunt  <james.hunt@ubuntu.com>

	* init/control.c:
	  - Typos.
	  - Improved uid checks.
	  - Replaced direct call to control_get_origin_uid() with call to new
	    control_check_permission() (as early as possible) for clarity and
	    to confine policy to one location. 
	  - control_set_log_prioity(): Added missing call to
	    control_check_permission().
	  - control_get_origin_uid(): Check message contents before allowing
	    D-Bus calls.

2013-01-29  James Hunt  <james.hunt@ubuntu.com>

	* init/control.c: More careful uid checking.
